--- a/domain/tsconfig.json
+++ b/domain/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": ["jest", "node"]
   },
-  "include": ["src"]
+  "include": ["src", "tests"]
 }
